--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <meta name="description" content="Experienced Full Stack Developer specializing in React, Node.js, and scalable system architecture. Passionate about creating innovative web applications and user experiences." />
     <meta name="author" content="Hemant Kumar" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="5d636830-b263-4cf0-9e3e-f8ca4f7ebd0a" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:title" content="5d636830-b263-4cf0-9e3e-f8ca4f7ebd0a" /> -->
+    <!-- <meta property="og:description" content="Lovable Generated Project" /> -->
+    <!-- <meta property="og:type" content="website" /> -->
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <!-- <meta name="twitter:site" content="@lovable_dev" /> -->
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
